--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,1 +1,36 @@
+name: Run main2.py daily (KST)
 
+on:
+  schedule:
+    # 매일 06:00 KST = 매일 21:00 UTC
+    - cron: "45 8 * * *"
+  workflow_dispatch:
+
+jobs:
+  run:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install Chrome
+        uses: browser-actions/setup-chrome@v1
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install selenium pandas gspread google-auth google-auth-oauthlib
+
+      - name: Run main2.py
+        env:
+          KEY1: ${{ secrets.KEY1 }}
+        run: |
+          python main2.py
