--- a/.github/workflows/fotmat_only.yml
+++ b/.github/workflows/fotmat_only.yml
@@ -2,8 +2,8 @@ name: Format Only (KST)
 
 on:
   schedule:
-    # 매일 오전 08:35 KST = 전날 23:35 UTC
-    - cron: "35 23 * * *"
+    # 매일 오전 10:00 KST = 매일 01:00 UTC
+    - cron: "0 1 * * *"
   workflow_dispatch:
 
 jobs:
@@ -29,9 +29,9 @@ jobs:
       - name: Run format_only.py with Retry
         uses: nick-fields/retry@v3
         with:
-          timeout_minutes: 20    # 포맷팅 작업이므로 20분이면 충분할 거예요
-          max_attempts: 3        # 실패 시 3번까지 재시도
+          timeout_minutes: 20
+          max_attempts: 3
           retry_on: error
-          command: python format_only.py
+          command: python format_only.py  # ⭐ 정확하게 수정됨
         env:
           KEY1: ${{ secrets.KEY1 }}
